# Music-Visualizer-Reboot

./: .dockerignore  .env  CMakeLists.txt  Dockerfile  Makefile  README.md  audioInformation.c  audioInformation.h  dataprocessing.c  dataprocessing.h  docker-compose.yml  visualize.c
